--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,22 @@ main {
 	padding: 0; !important
 }
 
+#time {
+	position: fixed;
+	bottom: 0;
+	left: 40%;
+	width: 20%;
+	font-size: 300%;
+	text-align: center;
+	font-weight: 900;
+	height: 100px;
+	border-right: 4px solid black;
+	border-left: 4px solid black;
+	border-top: 4px solid black;
+	background-color: white;
+	padding-top: 20px;
+}
+
 .conteudo {
 	width: 90%;
 	margin: 0 auto;
