--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,153 @@
+
 html {
-	width: 100%;
+    width: 100%;
+    font-size: 16px;
 }
-
 header {
-	height: 5em;
-	background-color: blue;
+    background-color: rgba(80, 118, 255, 0.6);
+    box-shadow: 0 2px 13px #000000;
+    height: 12%;
+    position: fixed;
+    top: 0;
+    transition: all 1s ease 0s;
+    width: 100%;
 }
-
 nav {
-
 }
-
 body {
-	margin: 0;
+    background-color: black;
+    margin: 0;
 }
-
 main {
-	padding-top: 1em;
+    padding-top: 1em;
 }
-
+#hipVid0 {
+    background-size: cover;
+    bottom: 0;
+    height: auto;
+    min-height: 50%;
+    min-width: 50%;
+    position: fixed;
+    left: 0;
+    transition: all 0.5s ease 0s;
+    width: auto;
+    z-index: -100;
+}
 .hipervideo {
-	height: 36.5em;
+    background: none repeat scroll 0 0 transparent;
+    height: 36.5em;
 }
-
 #evEsq {
-	height: 100%;
+    display: none;
+    height: 100%;
 }
-
 #evDir {
-	height: 100%;
+    display: none;
+    height: 100%;
 }
-
 #video {
-	padding: 0; !important
+    padding: 0;
 }
-
 #time {
-	position: fixed;
-	bottom: 0;
-	left: 40%;
-	width: 20%;
-	font-size: 300%;
-	text-align: center;
-	font-weight: 900;
-	height: 100px;
-	border-right: 4px solid black;
-	border-left: 4px solid black;
-	border-top: 4px solid black;
-	background-color: white;
-	padding-top: 20px;
+    background-color: #ffffff;
+    border-left: 4px solid #000000;
+    border-right: 4px solid #000000;
+    border-top: 4px solid #000000;
+    bottom: 0;
+    font-size: 250%;
+    font-weight: 900;
+    height: 100px;
+    left: 37%;
+    padding-top: 20px;
+    position: fixed;
+    text-align: center;
+    width: 25%;
 }
-
+.conteudo ul li {
+    color: #ffffff;
+    cursor: pointer;
+    float: left;
+    font-size: 200%;
+    list-style: outside none none;
+    margin-left: 0;
+    text-align: center;
+    text-decoration: none;
+    width: 20%;
+}
+.conteudo ul {
+    margin: 0 auto;
+    width: 70%;
+}
+.conteudo ul li:hover {
+    color: #d3d3d3;
+}
+.conteudo ul li:focus {
+    color: #000000;
+}
 .conteudo {
-	width: 90%;
-	margin: 0 auto;
+    margin: 15px auto;
+    text-decoration: none;
+    width: 90%;
 }
-
 .verde {
-	background-color: green;
+    background-color: #008000;
 }
-
-/* GRID */
-
 .grid {
-  background: white;
-  margin: 0 0 0.3em 0;
+    margin: 0 0 0.3em;
 }
-  
 .clearfix:after {
-	/* Or @extend clearfix */
-	content: "";
-	display: table;
-	clear: both;
+    clear: both;
+    content: "";
+    display: table;
 }
-
 *, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
-
-[class*='col-'] {
-  float: left;
+[class*="col-"] {
+    float: left;
 }
-
-[class*='col-'] {
-  padding-right: 20px;
+[class*="col-"] {
+    padding-right: 20px;
 }
-[class*='col-']:last-of-type {
-  padding-right: 0;
+[class*="col-"]:last-of-type {
+    padding-right: 0;
 }
-
 .col-2-3 {
-  width: 66.66%;
+    width: 66.66%;
 }
 .col-1-3 {
-  width: 33.33%;
+    width: 33.33%;
 }
 .col-1-2 {
-  width: 50%;
+    width: 50%;
 }
 .col-1-4 {
-  width: 25%;
+    width: 25%;
 }
-
 .col-1-5 {
-  width: 20%;
+    width: 20%;
 }
-
 .col-2-5 {
-  width: 40%;
+    width: 40%;
 }
-
 .col-3-5 {
-  width: 60%;
+    width: 60%;
 }
-
 .col-4-5 {
-  width: 80%;
+    width: 80%;
 }
-
 .col-1-8 {
-  width: 12.5%;
+    width: 12.5%;
 }
-
 .col-3-8 {
-  width: 37.5%;
+    width: 37.5%;
 }
-
 .col-5-8 {
-  width: 62.5%;
+    width: 62.5%;
 }
-
 .col-6-8 {
-  width: 75%;
+    width: 75%;
 }
-
 .col-6-8 {
-  width: 87.5%;
+    width: 87.5%;
 }
