--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,6 @@ main {
     height: 36.5em;
 }
 #evEsq {
-    display: none;
-    height: 100%;
 }
 #evDir {
     display: none;
@@ -92,6 +90,19 @@ main {
 .verde {
     background-color: #008000;
 }
+
+.evento1 {
+    background-color: rgba(200, 200, 200, 0.53);
+    border: 1px solid rgba(250, 250, 200, 1);
+    border-radius: 0 30px 30px 0;
+    height: 65%;
+    left: -25%;
+    position: fixed;
+    top: 17%;
+    transition: all 1s ease 0s;
+    width: 25%;
+}
+
 .grid {
     margin: 0 0 0.3em;
 }
