--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ main {
     height: auto;
     min-height: 50%;
     min-width: 50%;
-    position: fixed;
+    position: absolute;
     left: 0;
     transition: all 0.5s ease 0s;
     width: auto;
@@ -96,7 +96,7 @@ main {
     border: 1px solid rgba(250, 250, 200, 1);
     border-radius: 0 30px 30px 0;
     height: 65%;
-    left: -50%;
+    left: -52%;
     position: fixed;
     top: 17%;
     transition: all 2s ease 0s;
