--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,118 @@
+%clearfix {
+  zoom: 1; /* IE6&7 */
+  &:before, :after,{
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
 body {
-  padding: 100px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0px;
+  margin: 0px;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  &.tocando {
+    & header {
+      opacity: 0;
+    }
+    & a {
+      &.hipervideo {
+        opacity: 0;
+      }
+    }
+    #hipVid0 {
+      opacity: 1;
+    }
+  }
 }
 
 a {
   color: #00B7FF;
+  &.hipervideo {
+    cursor: pointer;
+    transition: all 0.5s ease 0s;
+    &:hover {
+      color: black;
+      background-color: white;
+    }
+  }
+}
+
+.conteudo {
+  width: 95%;
+  margin: 0 auto;
+  min-height: 60px;
+  @extend %clearfix;
+}
+
+.areaTematica {
+  text-align: center;
+  padding: 5%;
+}
+
+#hipVid0 {
+  background-size: cover;
+  bottom: 0;
+  height: auto;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  transition: all 0.5s ease 0s;
+  z-index: -100;
+  opacity: 0;
+}
+
+// grid
+
+$pad: 1%;
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.grid {
+  background: transparent;
+  margin: 0 0 $pad 0;
+  
+  &:after {
+    @extend clearfix 
+  }
+}
+
+[class*='col-'] {
+  float: left;
+  padding-right: $pad;
+  &:last-of-type {
+    padding-right: 0;
+  }
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3 {
+  width: 32.7%;
+}
+.col-1-2 {
+  width: 49.3%;
+}
+.col-1-4 {
+  width: 25%;
+}
+.col-3-4 {
+  width: 75%;
+}
+.col-1-5 {
+  width: 20%;
+}
+
+.col-1-6 {
+  width: 16.665%;
+}
+
+.col-1-8 {
+  width: 12.5%;
 }
