--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/styles/style.css')
     != LRScript
-  body
+  body#body
     block content
+    script(type="text/javascript", src="node_modules/rangeslider.js/src/rangeslider.js")
