--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,11 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/js/rangeslider.css')
     link(rel='stylesheet', href='/styles/style.css')
     != LRScript
   body#body
     block content
-    script(type="text/javascript", src="node_modules/rangeslider.js/src/rangeslider.js")
+    script(type="text/javascript", src="/js/jquery.min.js")
+    script(type="text/javascript", src="/js/rangeslider.min.js")
+    script(type="text/javascript", src="/js/application.js")
