Final da implementacao controles do video

--- a/views/index.jade
+++ b/views/index.jade
@@ -31,6 +31,14 @@ block content
         hr
         p= hipervideos[0].capitulos[3].nome
     .rangeslider(style="")
+      #tp-cr
+        #tp-cr-min 00
+        div(style="position: relative; float: left;") :
+        #tp-cr-sec 00
+      #tp-tt
+        #tp-tt-sec 00
+        div(style="position: relative; float: right;") :
+        #tp-tt-min 00
       .rangeslider__fill(style="width: 538.416px;")
       .rangeslider__handle(style="left: 537.416px;")
     input(type="range" id="seek-bar" min="0" max="1000" data-rangeslider="" style="display: none;")
