--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,6 +101,14 @@ a {
         width: 0;
       }
     }
+    #tp-cr {
+      opacity: 0;
+      font-size: 0;
+    }
+    #tp-tt {
+      opacity: 0;
+      font-size: 0;
+    }
   }
 }
 
@@ -170,10 +178,53 @@ a {
   top: 0;
   margin-left: -5px;
   transition: all 0.5s ease 0s;
+  z-index: 11;
   &:after {
     height: 10px;
     width: 10px;
   }
+}
+
+#tp-cr {
+  position: absolute; 
+  opacity: 1;
+  top: 0; 
+  left: 5px; 
+  color: black;
+  font-weight: 500;
+  z-index: 10;
+  transition: all 0.5s ease 0s;
+}
+
+#tp-cr-min {
+  position: relative; 
+  float: left;
+}
+
+#tp-cr-sec{
+  position: relative; 
+  float: left;
+}
+
+#tp-tt {
+  position: absolute; 
+  opacity: 1;
+  top: 0; 
+  right: 5px; 
+  color: white;
+  font-weight: 500;
+  z-index: 10;
+  transition: all 0.5s ease 0s;
+}
+
+#tp-tt-min {
+  position: relative; 
+  float: right;
+}
+
+#tp-tt-sec{
+  position: relative; 
+  float: right;
 }
 
 
