--- a/sass/vue.scss
+++ b/sass/vue.scss
@@ -1,5 +1,18 @@
+@import "vars";
+
 body {
-  padding: 20px;
-  margin: 20px;
-  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+	background: #333;
+	color: #fff;
+	padding: 0;
+	margin: 0;
+	font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+	color: #fff;
+}
+
+html,body,#app {
+	height: 100%;
+	overflow: hidden;
 }
