--- a/sass/vue.scss
+++ b/sass/vue.scss
@@ -17,3 +17,22 @@ a {
 	color: #fff;
 }
 
+// backgrounds de acordo com o contexto
+
+.context-bg {
+	.is-video-mulher & {
+		background: $color-video-1;
+	}
+	.is-video-adolescente & {
+		background: $color-video-2;
+	}
+	.is-video-crianca & {
+		background: $color-video-3;
+	}
+	.is-video-preso & {
+		background: $color-video-4;
+	}
+	.is-video-deficiente & {
+		background: $color-video-5;
+	}
+}
