Aplicacao NodeJS operando no Vue.js

--- a/views/vue/layout.jade
+++ b/views/vue/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title vue examples
     link(rel='stylesheet', href='/styles/vue.css')
+    link(rel='stylesheet', href='/js/rangeslider.css')
     != LRScript
   body
     block content
