--- a/views/vue/layout.jade
+++ b/views/vue/layout.jade
@@ -6,4 +6,5 @@ html
     link(rel='stylesheet', href='/js/rangeslider.css')
     != LRScript
   body
-    block content
+  script(type="text/javascript", src="/js/popcorn.min.js")
+  block content
