--- a/public/js/rangeslider.css
+++ b/public/js/rangeslider.css
@@ -1,8 +1,8 @@
 .rangeslider,
 .rangeslider__fill {
-  background: #e6e6e6;
+  /*background: #e6e6e6;*/
   display: block;
-  height: 20px;
+  height: 25px;
   width: 100%;
   -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
@@ -22,7 +22,7 @@
 }
 
 .rangeslider__fill {
-  background: #00ff00;
+  /*background: #00ff00;*/
   position: absolute;
   top: 0;
 }
