--- a/views/vue/layout.jade
+++ b/views/vue/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title vue examples
+    title Redes Estratégicas
     link(rel='stylesheet', href='/styles/vue.css')
     link(rel='stylesheet', href='/js/rangeslider.css')
     != LRScript
