altura do sidebar 100% e animação do sidebar block
mudança de height fixo para max-height,
para fazer animacoes de 0 => auto => 0
http://stackoverflow.com/questions/3508605/css-transition-height-0-to-height-auto

--- a/sass/vue.scss
+++ b/sass/vue.scss
@@ -1,6 +1,6 @@
 @import "globals";
 
-html,body,#app {
+html,body {
 	height: 100%;
 	overflow: hidden;
 }
@@ -15,6 +15,12 @@ body {
 
 a {
 	color: #fff;
+}
+
+#app,
+#app .view,
+#app .view .sidebar {
+	height: 100%;
 }
 
 // backgrounds de acordo com o contexto
