--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,5 @@ html
     != LRScript
   body
   script(type="text/javascript", src="/js/popcorn.min.js")
+  script(type="text/javascript", src="/js/d3.min.js")
   block content
