--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -3,7 +3,7 @@
 // paleta de cores
 
 $color-video-1: #f00;
-$color-video-2: #0f0;
+$color-video-2: #0c0;
 $color-video-3: #00f;
 $color-video-4: #00c;
 $color-video-5: #0cc;
