--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,9 +2,8 @@ doctype html
 html
   head
     title Redes Estratégicas
-    link(rel='stylesheet', href='/styles/vue.css')
+    link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/js/rangeslider.css')
-    != LRScript
   body
   script(type="text/javascript", src="/js/popcorn.min.js")
   script(type="text/javascript", src="/js/d3.min.js")
