gulp browserify / vueify

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   #app.marco-fechado
-  script(type="text/javascript", src="/js/hipervideo-vue.js")
+  script(type="text/javascript", src="/js/main.js")
