--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,8 +3,8 @@ html
   head
     title Redes Estratégicas
     link(rel='stylesheet', href='/styles/main.css')
-    link(rel='stylesheet', href='/js/rangeslider.css')
+    link(rel='stylesheet', href='/js/libs/rangeslider.css')
   body
-  script(type="text/javascript", src="/js/popcorn.min.js")
-  script(type="text/javascript", src="/js/d3.min.js")
+  script(type="text/javascript", src="/js/libs/popcorn.min.js")
+  script(type="text/javascript", src="/js/libs/d3.min.js")
   block content
