--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -10,11 +10,17 @@ body {
 	color: #fff;
 	padding: 0;
 	margin: 0;
-	font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	font-family: "Ubuntu", sans-serif;
+	font-weight: 400;
 }
 
 a {
 	color: #fff;
+}
+
+strong {
+	font-weight: 500;
 }
 
 .clickable {
