--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,9 +2,10 @@ doctype html
 html
   head
     title Redes Estratégicas
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic')
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/js/libs/rangeslider.css')
+    script(type="text/javascript", src="/js/libs/popcorn.min.js")
+    script(type="text/javascript", src="/js/libs/d3.min.js")
   body
-  script(type="text/javascript", src="/js/libs/popcorn.min.js")
-  script(type="text/javascript", src="/js/libs/d3.min.js")
-  block content
+    block content
