--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -7,3 +7,17 @@ $color-video-2: #0c0;
 $color-video-3: #00f;
 $color-video-4: #00c;
 $color-video-5: #0cc;
+
+
+// utils
+
+.clickable {
+	cursor: pointer;
+}
+
+.disable-select {
+	-webkit-user-select: none;  
+	-moz-user-select: none;    
+	-ms-user-select: none;      
+	user-select: none;
+}
