--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic')
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/js/libs/rangeslider.css')
+    link(rel='stylesheet', href='/modules/leaflet/dist/leaflet.css')
     script(type="text/javascript", src="/js/libs/popcorn.min.js")
     script(type="text/javascript", src="/js/libs/d3.min.js")
   body
