--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -6,6 +6,9 @@ html
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/js/libs/rangeslider.css')
     link(rel='stylesheet', href='/modules/leaflet/dist/leaflet.css')
+    link(rel='stylesheet', href='/js/libs/perfect-scrollbar.min.css')
+    link(rel='stylesheet', href='/js/libs/slick.css')
+    link(rel='stylesheet', href='/js/libs/slick-them.css')
     script(type="text/javascript", src="/js/libs/popcorn.min.js")
     script(type="text/javascript", src="/js/libs/d3.min.js")
   body
