--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -2,11 +2,11 @@
 
 // paleta de cores
 
-$color-video-1: #f00;
-$color-video-2: #0c0;
-$color-video-3: #00f;
-$color-video-4: #00c;
-$color-video-5: #0cc;
+$color-video-1: #ed1e79;
+$color-video-2: #00a300;
+$color-video-3: #0cc;
+$color-video-4: #f00;
+$color-video-5: #00c;
 
 
 // utils
