--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -8,6 +8,10 @@
 	src: url('/fonts/SANS_bold.ttf');
 }
 
+html {
+	font-size: 16px;
+}
+
 html,body {
 	height: 100%;
 	overflow: hidden;
@@ -18,7 +22,7 @@ body {
 	color: #fff;
 	padding: 0;
 	margin: 0;
-	font-size: 16px;
+	font-size: 100%;
 	font-family: "Ubuntu", sans-serif;
 	font-weight: 400;
 }
