--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,6 +15,9 @@
   font-family: 'fonte-bold';
   src: url('/fonts/SANS_bold.ttf'); }
 
+html {
+  font-size: 16px; }
+
 html, body {
   height: 100%;
   overflow: hidden; }
@@ -24,7 +27,7 @@ body {
   color: #fff;
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 100%;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400; }
 
