--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,6 +9,7 @@ html
     link(rel='stylesheet', href='/js/libs/perfect-scrollbar.min.css')
     link(rel='stylesheet', href='/js/libs/slick.css')
     link(rel='stylesheet', href='/js/libs/slick-them.css')
+    link(rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     script(type="text/javascript", src="/js/libs/popcorn.min.js")
     script(type="text/javascript", src="/js/libs/d3.min.js")
   body
