Preso para Prisional

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -43,7 +43,7 @@ strong {
   background: #00a300; }
 .is-video-crianca .context-bg {
   background: #0cc; }
-.is-video-preso .context-bg {
+.is-video-prisional .context-bg {
   background: #f00; }
 .is-video-deficiente .context-bg {
   background: #00c; }
