--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -47,7 +47,7 @@ strong {
 	.is-video-crianca & {
 		background: $color-video-3;
 	}
-	.is-video-preso & {
+	.is-video-prisional & {
 		background: $color-video-4;
 	}
 	.is-video-deficiente & {
