deficiente para deficiencia

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -50,7 +50,7 @@ strong {
 	.is-video-prisional & {
 		background: $color-video-4;
 	}
-	.is-video-deficiente & {
+	.is-video-deficiencia & {
 		background: $color-video-5;
 	}
 }
