--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -45,5 +45,5 @@ strong {
   background: #0cc; }
 .is-video-prisional .context-bg {
   background: #f00; }
-.is-video-deficiente .context-bg {
+.is-video-deficiencia .context-bg {
   background: #00c; }
