--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,7 +23,7 @@ html, body {
   overflow: hidden; }
 
 body {
-  background: #333;
+  background: black;
   color: #fff;
   padding: 0;
   margin: 0;
