--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,5 +12,7 @@ html
     link(rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     script(type="text/javascript", src="/js/libs/popcorn.min.js")
     script(type="text/javascript", src="/js/libs/d3.min.js")
+    script(type='text/javascript').
+        var useragent = !{JSON.stringify(useragent)};
   body#body
     block content
