--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -9,6 +9,19 @@ $color-video-4: #f00;
 $color-video-5: #00c;
 
 
+// links
+
+.link {
+	font-weight: 900;    
+	margin-bottom: 10px;
+	a {
+		display: block;
+		padding: 8px;
+		text-decoration: none;
+		line-height: 22px;
+	}
+}
+
 // utils
 
 .clickable {
