--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,12 @@
+.link {
+  font-weight: 900;
+  margin-bottom: 10px; }
+  .link a {
+    display: block;
+    padding: 8px;
+    text-decoration: none;
+    line-height: 22px; }
+
 .clickable {
   cursor: pointer; }
 
