--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title Redes Estratégicas
+    meta(property='og:site_name', content='redesestrategicassus.org')
+    meta(property='og:title', content='Redes Estratégicas do SUS')
+    meta(property='og:description', content='Assista e interaja com cinco experiências de efetivação das Redes Temáticas sobre Saúde da Mulher, Saúde da Criança, Saúde do Jovem e Adolescente, Saúde da Pessoa com Deficiência e Saúde da Pessoa Privada de Liberdade.')
+    meta(property='og:image', content='http://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/home_nova.png')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic')
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/js/libs/rangeslider.css')
